--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
         <div class="flex flex-col md:flex-row items-center gap-10 mb-12">
             <div class="relative group">
                 <div class="absolute inset-0 bg-gradient-to-tr from-themeGreen to-themeRed rounded-full blur opacity-20 group-hover:opacity-40 transition duration-500"></div>
-                <img src="ProfilePictureV1" alt="Profile" class="relative w-40 h-40 rounded-full border-4 border-cardBg object-cover shadow-2xl z-10">
+                <img src="ProfilePictureV1.png" alt="Profile" class="relative w-40 h-40 rounded-full border-4 border-cardBg object-cover shadow-2xl z-10">
             </div>
             
             <div class="text-center md:text-left max-w-2xl">
@@ -570,3 +570,4 @@ window.onload = () => {
   </script>
 </body>
 </html>
+
