--- a/index.html
+++ b/index.html
@@ -124,13 +124,17 @@ body {
         </div>
     </section>
 
-    <section id="otherwork" class="mb-24">
-        <div class="flex flex-col md:flex-row justify-start items-start mb-8 gap-4">
-            <div>
-                <h2 class="text-3xl font-bold mb-2">Other Work</h2>
-                <p class="text-gray-500 text-sm">Demostrations that haven't been published games with CCU. This allows you to see more of my work. </p>
-            </div>
+<section id="otherwork" class="mb-24">
+    <div class="flex flex-col md:flex-row justify-start items-start mb-8 gap-4">
+        <div>
+            <h2 class="text-3xl font-bold mb-2">Other Work</h2>
+            <p class="text-gray-500 text-sm">
+                Demonstrations that haven't been published games with CCU.
+            </p>
         </div>
+    </div>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
 <div class="game-card bg-[#1a1a1a] rounded-xl overflow-hidden hover:scale-[1.02] transition-all duration-300 border border-gray-800 hover:border-themeGreen group">
 
@@ -192,7 +196,6 @@ body {
     </div>
 </div>
 
-<br>
 
 <div class="game-card bg-[#1a1a1a] rounded-xl overflow-hidden hover:scale-[1.02] transition-all duration-300 border border-gray-800 hover:border-themeGreen group">
 
@@ -235,6 +238,7 @@ body {
         </div>
     </div>
 </div>
+    </div>
     </section>
 
   <section id="contact" class="mb-24 grid grid-cols-1 md:grid-cols-2 gap-x-4 gap-y-8">
@@ -570,4 +574,3 @@ window.onload = () => {
   </script>
 </body>
 </html>
-
