--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ body {
             <a href="https://vimeo.com/1097166804/52f3650157?share=copy"
                target="_blank"
                class="text-blue-400 hover:text-blue-300 transition-colors">
-                Click here! (Redirects to Vimeo)
+                  (Redirects to Vimeo)
             </a>
         </div>
 
@@ -181,7 +181,7 @@ body {
             <a href="https://www.roblox.com/games/110076302469151/Untitled-Game"
                target="_blank"
                class="text-blue-400 hover:text-blue-300 transition-colors">
-                Click here! (Redirects to Roblox)
+                  (Redirects to Roblox)
             </a>
         </div>
 
@@ -190,7 +190,7 @@ body {
             <a href="https://pastebin.com/sB71FaSX"
                target="_blank"
                class="text-blue-400 hover:text-blue-300 transition-colors">
-              Click here! (Redirects to Pastebin)
+                (Redirects to Pastebin)
             </a>
         </div>
     </div>
@@ -224,7 +224,7 @@ body {
             <a href="https://vimeo.com/1097166644/9b3a933461?share=copy$0"
                target="_blank"
                class="text-blue-400 hover:text-blue-300 transition-colors">
-              Click here! (Redirects to Vimeo)
+                (Redirects to Vimeo)
             </a>
         </div>
 
@@ -233,7 +233,7 @@ body {
             <a href="https://www.roblox.com/games/92749317870863/Tycoon-Framework$0"
                target="_blank"
                class="text-blue-400 hover:text-blue-300 transition-colors">
-               Click here! (Redirects to Roblox)
+                 (Redirects to Roblox)
             </a>
         </div>
     </div>
@@ -574,3 +574,4 @@ window.onload = () => {
   </script>
 </body>
 </html>
+
