--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ body {
 
     <h3 class="text-xl font-semibold mt-4 mb-2">Bug Fixing Policy</h3>
     <ul class="list-disc list-inside text-gray-400 text-sm">
-        <li>Bug fixes are provided free of charge.</li>
+        <li>Bug fixes are provided free of charge, however other terms apply & it will be done ASAP. Please forgive me if it takes longer then expected!</li>
         <li>Provide sufficient details/proof; insufficient info may delay fixes or result in cancellation.</li>
         <li>Not liable for delays caused by illness, hardware issues, or unavoidable circumstances.</li>
     </ul>
@@ -574,6 +574,7 @@ window.onload = () => {
   </script>
 </body>
 </html>
+
 
 
 
