Made Peak CCU more clearer

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ function renderGames(data) {
                 <h3 class="font-bold text-lg mb-4 truncate text-white group-hover:text-themeGreen transition">${game.title}</h3>
                 <div class="flex gap-2">
                     <div class="flex-1 bg-gray-800/80 rounded p-2 flex items-center justify-between">
-                        <span class="text-xs text-blue-400 font-bold">PLAYING</span>
+                        <span class="text-xs text-blue-400 font-bold">Peak CCU</span>
                         <span class="text-sm font-semibold">${formatNumber(game.playing)}</span>
                     </div>
                     <div class="flex-1 bg-gray-800/80 rounded p-2 flex items-center justify-between">
@@ -574,6 +574,7 @@ window.onload = () => {
   </script>
 </body>
 </html>
+
 
 
 
