--- a/index.html
+++ b/index.html
@@ -99,16 +99,12 @@ body {
 
     <hr class="border-gray-800 mb-24">
 
-    <section id="games" class="mb-24">
+   <section id="games" class="mb-24">
         <div class="flex flex-col md:flex-row justify-start items-start mb-8 gap-4">
             <div>
                 <h2 class="text-3xl font-bold mb-2">All Games</h2>
                 <p class="text-gray-500 text-sm">Displaying <span id="game-count" class="text-white">0</span> experiences. 
-                These are Peak CCU. The games you've seen here, I've made the majority of the game in all of them apart from Endzone Strike. Be warned, Fast Food Empire hasn't started ads. Also, Data is updated every 1-3d =) </p>
-
-                <br>
-
-                <p class="text-gray-500 text-sm">In Endzone strike, I made significant performance upgrades, reducing ping by over 50%, cutting sent & received by over 60%, and allowing funnels for the developers to track where their playerbase has lost interest. </p>
+                These are Peak CCU. The games you've seen here, I've made the majority of it or made good contributions (noticable to UX) Also, Data is updated every 1-3d =) </p>
             </div>
             
             <div class="flex gap-3 w-full md:w-auto">
@@ -577,6 +573,7 @@ window.onload = () => {
   </script>
 </body>
 </html>
+
 
 
 
